Se termino una interfaz grafica simple

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
                 <center><button class="copiar">prueba</button></center>
             </div>
 
-            <!--
-                <textarea  id="desencriptador" rows="20"></textarea>
-            -->
+            <div class="botones">
+                <p class="mensajeAdvertencia">⚠ solo letras minusculas y sin acentos</p>
+                <button class="btnEncriptar">Encriptar</button>
+                <button class="btnDesencriptar">Desencriptar</button>
+            </div>
         
         </main>
 
